# sunfounder-system-manager

./: README.md  pyproject.toml
examples/: print_all.py
sf_rpi_status/: __init__.py  ha_api.py  status.py  systemd_detector.py  utils.py  version.py
sunfounder_system_manager/: __init__.py  fan.py  pi5_power_button.py  pwm_fan.py  system_manager.py
