[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunfounder-system-manager"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for monitoring Raspberry Pi system status"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  "sf_rpi_status @ git+https://github.com/sunfounder/sf_rpi_status.git",
  "sunfounder_service_node @ git+https://github.com/sunfounder/sunfounder_service_node.git",
]

[tool.setuptools]
packages = ["sunfounder_system_manager"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/sunfounder-system-manager"
"Bug Tracker" = "https://github.com/sunfounder/sunfounder-system-manager/issues"

[project.scripts]
sunfounder-system-manager = "sunfounder_system_manager.main:main"

[tool.setuptools.dynamic]
version = {attr = "sunfounder_system.version.__version__"}